--- a/index.html
+++ b/index.html
@@ -4,73 +4,96 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@200" rel="stylesheet" />
+
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="estilos/medias.css">
-    <title>Media Query</title>
-    
+
+    <title>Moon In River - Significado das Contelações</title>
+
 </head>
-<body onresize="changeSize()">
-    
+<body>
+   
     <header>
 
-        <h1>Título do Site</h1>
+        <div id="art"></div>
+        <div id="menuicon" class="material-symbols-outlined" onclick="menuClick()">menu</div>
 
-        <div id="menuicon" class="material-symbols-outlined" onclick="clickMenu()">menu</div>
-
-        <menu id="options">
+        <menu id="constellations">
             <ul>
-                <li> <a href="#">Opção 1</a> </li>
-                <li> <a href="#">Opção 2</a> </li>
-                <li> <a href="#">Opção 3</a> </li>
-                <li> <a href="#">Opção 4</a> </li>
-                <li> <a href="#">Opção 5</a> </li>
+                <li> Cruzeiro do Sul </li>
+                <li> Hydra </li>
+                <li> Lyra </li>
+                <li> Órion </li>
+                <li> Pegasus </li>
             </ul>
         </menu>
 
     </header>
 
-
     <main>
 
-        <article>
+        <div id="container">
 
-            <h2>Teste de Media Query</h2>
+            <section id="cru">
 
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut modi quas doloribus dolores cum iure, odit ab aperiam? Sint ipsa facere ad iusto, tenetur rerum sapiente adipisci omnis magnam unde. Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam labore eius maiores saepe obcaecati provident necessitatibus, quasi eos blanditiis nobis officiis est illum aliquam? Aperiam officia perspiciatis adipisci nihil impedit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt minus earum vitae, enim perspiciatis excepturi necessitatibus tempora deleniti nam corrupti, omnis cum nostrum officia asperiores. Fuga velit nisi illo quisquam.
-            </p>
+                <img src="imagens/cruzeiro-do-sul.png" alt="Cruzeiro do Sul" class="image">
 
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, cumque vero repudiandae minima consectetur ipsa unde. Totam explicabo debitis doloremque, ipsa aspernatur eos id fuga blanditiis, numquam, quasi autem atque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt porro, cupiditate animi maiores quod illo ratione. Voluptate, commodi totam. Porro a omnis minus totam nulla ipsam eveniet repellat, nisi consequatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis saepe totam nobis. Perspiciatis, sunt exercitationem! Aperiam vel ex consectetur doloremque expedita a labore, eum maxime dicta, dignissimos velit magnam eos?
-            </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deserunt provident minus eum molestiae facilis vitae, itaque quidem rerum distinctio neque, odio id placeat eaque sapiente. Nesciunt, perferendis animi! Reiciendis?</p>
 
-            <h2>Testing Media Queries</h2>
+            </section>
 
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores vero sunt a delectus vel nesciunt, numquam est dignissimos dolorem aliquid eaque ullam voluptas mollitia ea tempora, tempore ex nemo explicabo! Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores magnam nisi illum dolore debitis cupiditate! Quo sapiente laudantium, a, fuga beatae rerum voluptatibus molestiae minima quia voluptatem ea temporibus reprehenderit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate corrupti reprehenderit in odit ut asperiores maiores, consequuntur culpa aspernatur mollitia tempora, voluptatibus fugit architecto quisquam sit. Vel expedita modi soluta.
-            </p>
 
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, eum. Vitae vero assumenda optio laboriosam hic, illo necessitatibus odio iste nulla dolorum ipsam laborum aspernatur enim dignissimos explicabo architecto expedita? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptate deleniti voluptas neque ea id, asperiores similique nemo eum. Vitae consequuntur et laboriosam iusto nihil! Tempora consequatur iste omnis neque! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel, rerum corrupti dignissimos, quaerat deserunt similique reprehenderit placeat incidunt laborum molestias expedita voluptatum repudiandae, nemo earum dolorem possimus ad porro sunt.
-            </p>
+            <section id="hyd">
 
-        </article>
+                <img src="imagens/hydra.png" alt="Hydra" class="image">
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deserunt provident minus eum molestiae facilis vitae, itaque quidem rerum distinctio neque, odio id placeat eaque sapiente. Nesciunt, perferendis animi! Reiciendis?</p>
+
+            </section>
+
+
+            <section id="lyr">
+
+                <img src="imagens/lyra.png" alt="Lyra" class="image">
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deserunt provident minus eum molestiae facilis vitae, itaque quidem rerum distinctio neque, odio id placeat eaque sapiente. Nesciunt, perferendis animi! Reiciendis?</p>
+
+            </section>
+
+
+            <section id="ori">
+
+                <img src="imagens/orion.png" alt="Órion" class="image">
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deserunt provident minus eum molestiae facilis vitae, itaque quidem rerum distinctio neque, odio id placeat eaque sapiente. Nesciunt, perferendis animi! Reiciendis?</p>
+
+            </section>
+
+
+            <section id="peg">
+
+                <img src="imagens/pegasus.png" alt="Pégasus" class="image">
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deserunt provident minus eum molestiae facilis vitae, itaque quidem rerum distinctio neque, odio id placeat eaque sapiente. Nesciunt, perferendis animi! Reiciendis?</p>
+
+            </section>
+
+        </div>
 
     </main>
 
     <script>
 
-        function clickMenu()
+        function menuClick() 
         {
-            if(options.style.display == 'block') options.style.display = 'none'
-            else options.style.display = 'block'
-        }
-
-        function changeSize() 
-        {
-            if(window.innerWidth >= 768) options.style.display = 'block'
-            else options.style.display = 'none'
+            if(constellations.style.display == 'block')
+            {
+                constellations.style.display = 'none'
+            }
+            else
+            {
+                constellations.style.display = 'block'
+            }
         }
 
     </script>
