--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@200" rel="stylesheet" />
 
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/medias.css">
 
     <title>Moon In River - Significado das Contelações</title>
 
 </head>
-<body>
+<body onresize="changeSize()">
    
     <header>
 
         <div id="art"></div>
         <div id="menuicon" class="material-symbols-outlined" onclick="menuClick()">menu</div>
+        <div id="miBorder"></div>
 
         <menu id="constellations">
             <ul>
-                <li> Cruzeiro do Sul </li>
-                <li> Hydra </li>
-                <li> Lyra </li>
-                <li> Órion </li>
-                <li> Pegasus </li>
+                <li onclick="windowRoll(750, 450)"> Cruzeiro do Sul </li>
+                <li onclick="windowRoll(1225, 925)"> Hydra </li>
+                <li onclick="windowRoll(1700, 1420)"> Lyra </li>
+                <li onclick="windowRoll(2215, 1885)"> Órion </li>
+                <li onclick="windowRoll(2700, 2500)"> Pegasus </li>
             </ul>
         </menu>
 
@@ -38,7 +40,8 @@
 
                 <img src="imagens/cruzeiro-do-sul.png" alt="Cruzeiro do Sul" class="image">
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deserunt provident minus eum molestiae facilis vitae, itaque quidem rerum distinctio neque, odio id placeat eaque sapiente. Nesciunt, perferendis animi! Reiciendis?</p>
+
+                <p>Essa constelação é um guia de orientação e um símbolo de identidade regional. Ela nos lembra da importância de encontrar nosso caminho e apreciar a beleza única do hemisfério sul, enquanto nos conecta às maravilhas do cosmos.</p>
 
             </section>
 
@@ -47,7 +50,7 @@
 
                 <img src="imagens/hydra.png" alt="Hydra" class="image">
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deserunt provident minus eum molestiae facilis vitae, itaque quidem rerum distinctio neque, odio id placeat eaque sapiente. Nesciunt, perferendis animi! Reiciendis?</p>
+                <p>Apesar de sua aparência serpentina, essa constelação pode ser vista como um símbolo de regeneração, renovação e fluidez. Ela nos lembra que, mesmo nas situações mais desafiadoras, sempre há oportunidade para recomeçar.</p>
 
             </section>
 
@@ -56,7 +59,7 @@
 
                 <img src="imagens/lyra.png" alt="Lyra" class="image">
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deserunt provident minus eum molestiae facilis vitae, itaque quidem rerum distinctio neque, odio id placeat eaque sapiente. Nesciunt, perferendis animi! Reiciendis?</p>
+                <p> Representando uma lira ou harpa, esta constelação é associada à música, à poesia e à criatividade. Lyra nos inspira a expressar nossas emoções e a encontrar beleza nas artes.</p>
 
             </section>
 
@@ -65,7 +68,7 @@
 
                 <img src="imagens/orion.png" alt="Órion" class="image">
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deserunt provident minus eum molestiae facilis vitae, itaque quidem rerum distinctio neque, odio id placeat eaque sapiente. Nesciunt, perferendis animi! Reiciendis?</p>
+                <p>Representa o lendário caçador da mitologia grega, Orion. Suas estrelas brilhantes formam uma figura distintiva no céu e são frequentemente associadas à força, determinação, inspirando-nos a enfrentar desafios com resolução e buscar harmonia em nossas vidas.</p>
 
             </section>
 
@@ -74,7 +77,7 @@
 
                 <img src="imagens/pegasus.png" alt="Pégasus" class="image">
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt deserunt provident minus eum molestiae facilis vitae, itaque quidem rerum distinctio neque, odio id placeat eaque sapiente. Nesciunt, perferendis animi! Reiciendis?</p>
+                <p>A constelação do cavalo alado da mitologia grega evoca a imaginação e a liberdade. É um símbolo de criatividade e sonhos, lembrando-nos de nossa capacidade de imaginar e voar acima de obstáculos.</p>
 
             </section>
 
@@ -89,11 +92,25 @@
             if(constellations.style.display == 'block')
             {
                 constellations.style.display = 'none'
+                menuicon.textContent = 'menu';
             }
             else
             {
                 constellations.style.display = 'block'
+                menuicon.textContent = 'close';
             }
+        }
+
+        function changeSize() 
+        {
+            if(window.innerWidth >= 768) constellations.style.display = 'block'
+            else constellations.style.display = 'none'
+        }
+
+        function windowRoll(pos1, pos2)
+        {
+            if(window.innerWidth >= 992) window.scrollTo(0, pos2)
+            else window.scrollTo(0, pos1)
         }
 
     </script>
