--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/medias.css">
 
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Moon In River - Significado das Contelações</title>
 
 </head>
@@ -117,13 +118,13 @@
             else window.scrollTo(0, pos1)
         }
 
-        menuicon.addEventListener('mousedown', function()
+        menuicon.addEventListener('pointerdown', function()
         { 
             miBorder.style.backgroundColor = '#ffffff'
             insideicon.style.visibility = 'visible'
         })
 
-        menuicon.addEventListener('mouseup', function()
+        menuicon.addEventListener('pointerup', function()
         { 
             miBorder.style.backgroundColor = '#00000000';
             insideicon.style.visibility = 'hidden'
